--- a/src/edge.8
+++ b/src/edge.8
@@ -4,7 +4,7 @@ edge \- n2n edge node daemon
 .SH SYNOPSIS
 .B edge
 [\-d <tun device>] \-a <tun IP address> \-c <community> \-k <encrypt key> \-l <supernode host:port> 
-[\-p <local port>] [\-u <UID>] [\-g <GID>] [-f] [\-m <MAC address>] [\-t] [\-r] [\-v]
+[\-p <local port>] [\-u <UID>] [\-g <GID>] [\-f] [\-P <pidfile>] [\-m <MAC address>] [\-t] [\-r] [\-v]
 .SH DESCRIPTION
 N2N is a peer-to-peer VPN system. Edge is the edge node daemon for n2n which
 creates a TAP interface to expose the n2n virtual LAN. On startup n2n creates
@@ -55,6 +55,9 @@ longer required.
 \-f
 causes the edge process to fork and run as a daemon, closing stdin, stdout,
 stderr and becoming a process group leader.
+.TP
+\-P <pidfile>
+causes the edge process to write its PID to the given file.
 .TP
 \-m <MAC>
 start the TAP interface with the given MAC address. This is highly recommended
