--- a/src/supernode.1
+++ b/src/supernode.1
@@ -2,7 +2,7 @@
 .SH NAME
 supernode \- n2n supernode daemon
 .SH SYNOPSIS
-.B supernode \-l <port> [\-v]
+.B supernode \-l <port> [\-v] [\-u <uid>] [\-g <gid>] [\-f] [\-P <pidfile>]
 .SH DESCRIPTION
 N2N is a peer-to-peer VPN system. Supernode is a node introduction registry,
 broadcast conduit and packet relay node for the n2n system. On startup supernode
@@ -20,6 +20,21 @@ All logging goes to stdout.
 .TP
 \-l <port>
 listen on the given UDP port
+.TP
+\-u <uid>
+causes the supernode process to drop to the given user ID when privileges are no
+longer required.
+.TP
+\-g <gid>
+causes the supernode process to drop to the given group ID when privileges are no
+longer required.
+.TP
+\-f
+causes the supernode process to fork and run as a daemon, closing stdin, stdout,
+stderr and becoming a process group leader.
+.TP
+\-P <pidfile>
+causes the supernode process to write its PID to the given file.
 .TP
 \-v
 use verbose logging
